Fix banner issue on Safari, add Searchify to 'Work'
Modify media queries for 'Work' pages

--- a/app/styles/_media-queries.scss
+++ b/app/styles/_media-queries.scss
@@ -91,6 +91,11 @@
             margin: 15px 0 0;
         }
     }
+    .project {
+        h3 {
+            font-size: 14px;
+        }
+    }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1199px) and (orientation: landscape) {
